[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aci-cache"
version = "0.1.0"
description = "Adaptive cache invalidation for Redis. Drop-in wrapper, zero config."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Taaha"},
]
keywords = ["redis", "cache", "invalidation", "adaptive", "pubsub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
]
dependencies = [
    "redis>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "fakeredis>=2.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aci_cache"]

[tool.hatch.build.targets.sdist]
exclude = [
    "venv/",
    "node/",
    ".pytest_cache/",
    "*.egg-info/",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
